# libfsapfs

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  autogen.sh  build.ps1  configure.ac  libfsapfs.ini  libfsapfs.pc.in  libfsapfs.spec.in  libfsapfs_libcaes.h  pyproject.toml.in  setup.cfg.in  setup.py  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  synctestdata.ps1  synctestdata.sh  synczlib.ps1  tox.ini
fsapfstools/: Makefile.am  bodyfile.c  bodyfile.h  digest_hash.c  digest_hash.h  fsapfsinfo.c  fsapfsmount.c  fsapfstools_getopt.c  fsapfstools_getopt.h  fsapfstools_i18n.h  fsapfstools_libbfio.h  fsapfstools_libcdata.h  fsapfstools_libcerror.h  fsapfstools_libclocale.h  fsapfstools_libcnotify.h  fsapfstools_libcpath.h  fsapfstools_libfdatetime.h  fsapfstools_libfguid.h  fsapfstools_libfsapfs.h  fsapfstools_libfsrefs.h  fsapfstools_libhmac.h  fsapfstools_libuna.h  fsapfstools_output.c  fsapfstools_output.h  fsapfstools_signal.c  fsapfstools_signal.h  fsapfstools_unused.h  info_handle.c  info_handle.h  mount_dokan.c  mount_dokan.h  mount_file_entry.c  mount_file_entry.h  mount_file_system.c  mount_file_system.h  mount_fuse.c  mount_fuse.h  mount_handle.c  mount_handle.h  mount_path_string.c  (+3 more)
include/: Makefile.am  libfsapfs.h.in
include/libfsapfs/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libfsapfs/: Makefile.am  fsapfs_btree.h  fsapfs_checkpoint_map.h  fsapfs_chunk_information_block.h  fsapfs_compressed_data.h  fsapfs_container_object_map.h  fsapfs_container_physical_map.h  fsapfs_container_reaper.h  fsapfs_container_space_manager.h  fsapfs_container_superblock.h  fsapfs_extent_reference_tree.h  fsapfs_file_system.h  fsapfs_fusion_middle_tree.h  fsapfs_key_bag.h  fsapfs_object.h  fsapfs_object_map.h  fsapfs_snapshot_metadata.h  fsapfs_snapshot_metadata_tree.h  fsapfs_space_manager.h  fsapfs_volume_superblock.h  libfsapfs.c  libfsapfs.rc.in  libfsapfs_attribute_values.c  libfsapfs_attribute_values.h  libfsapfs_attributes.c  libfsapfs_attributes.h  libfsapfs_bit_stream.c  libfsapfs_bit_stream.h  libfsapfs_btree_entry.c  libfsapfs_btree_entry.h  libfsapfs_btree_footer.c  libfsapfs_btree_footer.h  libfsapfs_btree_header.c  libfsapfs_btree_header.h  libfsapfs_btree_node.c  libfsapfs_btree_node.h  libfsapfs_btree_node_header.c  libfsapfs_btree_node_header.h  libfsapfs_btree_root.c  libfsapfs_btree_root.h  (+146 more)
msvscpp/: Makefile.am  libfsapfs.sln
msvscpp/fsapfs_test_bit_stream/: fsapfs_test_bit_stream.vcproj
msvscpp/fsapfs_test_btree_entry/: fsapfs_test_btree_entry.vcproj
msvscpp/fsapfs_test_btree_footer/: fsapfs_test_btree_footer.vcproj
msvscpp/fsapfs_test_btree_header/: fsapfs_test_btree_header.vcproj
msvscpp/fsapfs_test_btree_node/: fsapfs_test_btree_node.vcproj
msvscpp/fsapfs_test_btree_node_header/: fsapfs_test_btree_node_header.vcproj
msvscpp/fsapfs_test_btree_root/: fsapfs_test_btree_root.vcproj
msvscpp/fsapfs_test_buffer_data_handle/: fsapfs_test_buffer_data_handle.vcproj
msvscpp/fsapfs_test_checkpoint_map/: fsapfs_test_checkpoint_map.vcproj
msvscpp/fsapfs_test_checkpoint_map_entry/: fsapfs_test_checkpoint_map_entry.vcproj
msvscpp/fsapfs_test_checksum/: fsapfs_test_checksum.vcproj
msvscpp/fsapfs_test_chunk_information_block/: fsapfs_test_chunk_information_block.vcproj
msvscpp/fsapfs_test_compressed_data_handle/: fsapfs_test_compressed_data_handle.vcproj
msvscpp/fsapfs_test_compression/: fsapfs_test_compression.vcproj
msvscpp/fsapfs_test_container/: fsapfs_test_container.vcproj
msvscpp/fsapfs_test_container_data_handle/: fsapfs_test_container_data_handle.vcproj
msvscpp/fsapfs_test_container_key_bag/: fsapfs_test_container_key_bag.vcproj
msvscpp/fsapfs_test_container_object_map/: fsapfs_test_container_object_map.vcproj
msvscpp/fsapfs_test_container_physical_map/: fsapfs_test_container_physical_map.vcproj
ossfuzz/: Makefile.am  container_fuzzer.cc  extended_attribute_fuzzer.cc  file_entry_fuzzer.cc  ossfuzz_libbfio.h  ossfuzz_libfsapfs.h  volume_fuzzer.cc
pyfsapfs/: Makefile.am  pyfsapfs.c  pyfsapfs.h  pyfsapfs_container.c  pyfsapfs_container.h  pyfsapfs_datetime.c  pyfsapfs_datetime.h  pyfsapfs_error.c  pyfsapfs_error.h  pyfsapfs_extended_attribute.c  pyfsapfs_extended_attribute.h  pyfsapfs_extended_attributes.c  pyfsapfs_extended_attributes.h  pyfsapfs_file_entries.c  pyfsapfs_file_entries.h  pyfsapfs_file_entry.c  pyfsapfs_file_entry.h  pyfsapfs_file_object_io_handle.c  pyfsapfs_file_object_io_handle.h  pyfsapfs_guid.c  pyfsapfs_guid.h  pyfsapfs_integer.c  pyfsapfs_integer.h  pyfsapfs_libbfio.h  pyfsapfs_libcerror.h  pyfsapfs_libclocale.h  pyfsapfs_libfguid.h  pyfsapfs_libfsapfs.h  pyfsapfs_python.h  pyfsapfs_unused.h  pyfsapfs_volume.c  pyfsapfs_volume.h  pyfsapfs_volumes.c  pyfsapfs_volumes.h
pyfsapfs-python2/: Makefile.am
tests/: Makefile.am  atlocal.in  fsapfs_test_bit_stream.c  fsapfs_test_btree_entry.c  fsapfs_test_btree_footer.c  fsapfs_test_btree_header.c  fsapfs_test_btree_node.c  fsapfs_test_btree_node_header.c  fsapfs_test_btree_root.c  fsapfs_test_buffer_data_handle.c  fsapfs_test_checkpoint_map.c  fsapfs_test_checkpoint_map_entry.c  fsapfs_test_checksum.c  fsapfs_test_chunk_information_block.c  fsapfs_test_compressed_data_handle.c  fsapfs_test_compression.c  fsapfs_test_container.c  fsapfs_test_container_data_handle.c  fsapfs_test_container_key_bag.c  fsapfs_test_container_object_map.c  fsapfs_test_container_physical_map.c  fsapfs_test_container_physical_map_entry.c  fsapfs_test_container_reaper.c  fsapfs_test_container_space_manager.c  fsapfs_test_container_superblock.c  fsapfs_test_data_block.c  fsapfs_test_data_block_data_handle.c  fsapfs_test_data_block_vector.c  fsapfs_test_data_stream.c  fsapfs_test_data_stream_descriptor.c  fsapfs_test_deflate.c  fsapfs_test_directory_record.c  fsapfs_test_encryption_context.c  fsapfs_test_error.c  fsapfs_test_extended_attribute.c  fsapfs_test_extent_reference_tree.c  fsapfs_test_extern.h  fsapfs_test_file_entry.c  fsapfs_test_file_extent.c  fsapfs_test_file_system.c  (+80 more)
tests/data/: inode.1  (+16 more)
(+119 files in other folders)
