include_HEADERS = \
	libfsapfs.h

pkginclude_HEADERS = \
	libfsapfs/codepage.h \
	libfsapfs/definitions.h \
	libfsapfs/error.h \
	libfsapfs/extern.h \
	libfsapfs/features.h \
	libfsapfs/types.h

EXTRA_DIST = \
	libfsapfs.h.in \
	libfsapfs/definitions.h.in \
	libfsapfs/features.h.in \
	libfsapfs/types.h.in

DISTCLEANFILES = \
	libfsapfs.h \
	libfsapfs/definitions.h \
	libfsapfs/features.h \
	libfsapfs/types.h \
	Makefile \
	Makefile.in

