MSVSCPP_FILES = \
	fsapfs_test_container_superblock/fsapfs_test_container_superblock.vcproj \
	fsapfs_test_error/fsapfs_test_error.vcproj \
	fsapfs_test_io_handle/fsapfs_test_io_handle.vcproj \
	fsapfs_test_notify/fsapfs_test_notify.vcproj \
	fsapfs_test_support/fsapfs_test_support.vcproj \
	fsapfs_test_volume/fsapfs_test_volume.vcproj \
	fsapfsinfo/fsapfsinfo.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfsapfs/libfsapfs.vcproj \
	libuna/libuna.vcproj \
	libfsapfs.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

