MSVSCPP_FILES = \
	fsapfs_test_container/fsapfs_test_container.vcproj \
	fsapfs_test_container_object_map/fsapfs_test_container_object_map.vcproj \
	fsapfs_test_container_physical_map/fsapfs_test_container_physical_map.vcproj \
	fsapfs_test_container_physical_map_entry/fsapfs_test_container_physical_map_entry.vcproj \
	fsapfs_test_container_reaper/fsapfs_test_container_reaper.vcproj \
	fsapfs_test_container_space_manager/fsapfs_test_container_space_manager.vcproj \
	fsapfs_test_container_superblock/fsapfs_test_container_superblock.vcproj \
	fsapfs_test_error/fsapfs_test_error.vcproj \
	fsapfs_test_io_handle/fsapfs_test_io_handle.vcproj \
	fsapfs_test_notify/fsapfs_test_notify.vcproj \
	fsapfs_test_object/fsapfs_test_object.vcproj \
	fsapfs_test_support/fsapfs_test_support.vcproj \
	fsapfs_test_volume/fsapfs_test_volume.vcproj \
	fsapfs_test_volume_superblock/fsapfs_test_volume_superblock.vcproj \
	fsapfsinfo/fsapfsinfo.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfsapfs/libfsapfs.vcproj \
	libuna/libuna.vcproj \
	libfsapfs.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

