MSVSCPP_FILES = \
	fsapfs_test_btree_entry/fsapfs_test_btree_entry.vcproj \
	fsapfs_test_btree_footer/fsapfs_test_btree_footer.vcproj \
	fsapfs_test_btree_node/fsapfs_test_btree_node.vcproj \
	fsapfs_test_btree_node_header/fsapfs_test_btree_node_header.vcproj \
	fsapfs_test_buffer_data_handle/fsapfs_test_buffer_data_handle.vcproj \
	fsapfs_test_checkpoint_map/fsapfs_test_checkpoint_map.vcproj \
	fsapfs_test_checkpoint_map_entry/fsapfs_test_checkpoint_map_entry.vcproj \
	fsapfs_test_checksum/fsapfs_test_checksum.vcproj \
	fsapfs_test_chunk_information_block/fsapfs_test_chunk_information_block.vcproj \
	fsapfs_test_compressed_data_handle/fsapfs_test_compressed_data_handle.vcproj \
	fsapfs_test_compression/fsapfs_test_compression.vcproj \
	fsapfs_test_container/fsapfs_test_container.vcproj \
	fsapfs_test_container_data_handle/fsapfs_test_container_data_handle.vcproj \
	fsapfs_test_container_key_bag/fsapfs_test_container_key_bag.vcproj \
	fsapfs_test_container_reaper/fsapfs_test_container_reaper.vcproj \
	fsapfs_test_container_superblock/fsapfs_test_container_superblock.vcproj \
	fsapfs_test_data_block/fsapfs_test_data_block.vcproj \
	fsapfs_test_directory_record/fsapfs_test_directory_record.vcproj \
	fsapfs_test_encryption_context/fsapfs_test_encryption_context.vcproj \
	fsapfs_test_error/fsapfs_test_error.vcproj \
	fsapfs_test_file_extent/fsapfs_test_file_extent.vcproj \
	fsapfs_test_file_system_btree/fsapfs_test_file_system_btree.vcproj \
	fsapfs_test_inode/fsapfs_test_inode.vcproj \
	fsapfs_test_io_handle/fsapfs_test_io_handle.vcproj \
	fsapfs_test_key_bag_entry/fsapfs_test_key_bag_entry.vcproj \
	fsapfs_test_key_bag_header/fsapfs_test_key_bag_header.vcproj \
	fsapfs_test_key_encrypted_key/fsapfs_test_key_encrypted_key.vcproj \
	fsapfs_test_name/fsapfs_test_name.vcproj \
	fsapfs_test_name_hash/fsapfs_test_name_hash.vcproj \
	fsapfs_test_notify/fsapfs_test_notify.vcproj \
	fsapfs_test_object/fsapfs_test_object.vcproj \
	fsapfs_test_object_map/fsapfs_test_object_map.vcproj \
	fsapfs_test_object_map_btree/fsapfs_test_object_map_btree.vcproj \
	fsapfs_test_object_map_descriptor/fsapfs_test_object_map_descriptor.vcproj \
	fsapfs_test_space_manager/fsapfs_test_space_manager.vcproj \
	fsapfs_test_support/fsapfs_test_support.vcproj \
	fsapfs_test_volume/fsapfs_test_volume.vcproj \
	fsapfs_test_volume_key_bag/fsapfs_test_volume_key_bag.vcproj \
	fsapfs_test_volume_superblock/fsapfs_test_volume_superblock.vcproj \
	fsapfsinfo/fsapfsinfo.vcproj \
	fsapfsmount/fsapfsmount.vcproj \
	libbfio/libbfio.vcproj \
	libcaes/libcaes.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfsapfs/libfsapfs.vcproj \
	libhmac/libhmac.vcproj \
	libuna/libuna.vcproj \
	pyfsapfs/pyfsapfs.vcproj \
	zlib/zlib.vcproj \
	libfsapfs.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

